app-manifests/base/demo-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-service
spec:
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
