app-manifests/base/demo-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-web-ingress
spec:
  defaultBackend:
        service:
          name: demo-web
          port:
            number: 8888
  tls:
  - hosts:
    - demo-web.dev.squantumengine.com
    secretName: demo-web-tls-secret
